tests/paczka1/fuzzy1/38574921.err
Error in line 8: Sd42wEPw S868 14,7
Error in line 26: Sd42wEPw S55 272,1
Error in line 31: Sd42wEPw S868 46,48
Error in line 23: XMSrO A192 2,8
Error in line 28: Sd42wEPw S868 25,0
Error in line 32: XMSrO S868 94,0
Error in line 39: XMSrO A192 24,0
